changes to thesis core

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -360,3 +360,13 @@ publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
 month = {may}
 }
+
+
+@misc{ucsgnet_ml,
+      title={UCSG-Net -- Unsupervised Discovering of Constructive Solid Geometry Tree}, 
+      author={Kacper Kania and Maciej Zięba and Tomasz Kajdanowicz},
+      year={2020},
+      eprint={2006.09102},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
