--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -202,16 +202,6 @@
 	hal_id       = {hal-00926861},
 	hal_version  = {v1}
 }
-@article{bounding_algorithms,
-	title        = {Efficient bounds in constructive solid geometry},
-	author       = {S. {Cameron}},
-	year         = 1991,
-	journal      = {IEEE Computer Graphics and Applications},
-	volume       = 11,
-	number       = 3,
-	pages        = {68--74},
-	doi          = {10.1109/38.79455}
-}
 @inproceedings{hardware_accelerated_image_based_csg.,
 	title        = {Rendering Techniques for Hardware-Accelerated Image-Based CSG.},
 	author       = {Kirsch, Florian and Döllner, Jürgen},
@@ -321,52 +311,60 @@
 	eprint       = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1467-8659.2007.01062.x}
 }
 @incollection{ray_tracing_BSP2,
-title = {VI.1 - RAY TRACING WITH THE BSP TREE},
-editor = {DAVID KIRK},
-booktitle = {Graphics Gems III (IBM Version)},
-publisher = {Morgan Kaufmann},
-address = {San Francisco},
-pages = {271-274},
-year = {1992},
-isbn = {978-0-12-409673-8},
-doi = {https://doi.org/10.1016/B978-0-08-050755-2.50061-0},
-url = {https://www.sciencedirect.com/science/article/pii/B9780080507552500610},
-author = {Kelvin Sung and Peter Shirley},
+	title        = {VI.1 - RAY TRACING WITH THE BSP TREE},
+	author       = {Kelvin Sung and Peter Shirley},
+	year         = 1992,
+	booktitle    = {Graphics Gems III (IBM Version)},
+	publisher    = {Morgan Kaufmann},
+	address      = {San Francisco},
+	pages        = {271--274},
+	doi          = {https://doi.org/10.1016/B978-0-08-050755-2.50061-0},
+	isbn         = {978-0-12-409673-8},
+	url          = {https://www.sciencedirect.com/science/article/pii/B9780080507552500610},
+	editor       = {DAVID KIRK}
 }
 @article{efficient_csg_meshes,
-title = {Efficient non-incremental constructive solid geometry evaluation for triangular meshes},
-journal = {Graphical Models},
-volume = {97},
-pages = {1-16},
-year = {2018},
-issn = {1524-0703},
-doi = {https://doi.org/10.1016/j.gmod.2018.03.001},
-url = {https://www.sciencedirect.com/science/article/pii/S1524070318300067},
-author = {Bin Sheng and Ping Li and Hongbo Fu and Lizhuang Ma and Enhua Wu},
-keywords = {Boolean operations, Plane-based geometry, CSG evaluation, Hybrid representation},
+	title        = {Efficient non-incremental constructive solid geometry evaluation for triangular meshes},
+	author       = {Bin Sheng and Ping Li and Hongbo Fu and Lizhuang Ma and Enhua Wu},
+	year         = 2018,
+	journal      = {Graphical Models},
+	volume       = 97,
+	pages        = {1--16},
+	doi          = {https://doi.org/10.1016/j.gmod.2018.03.001},
+	issn         = {1524-0703},
+	url          = {https://www.sciencedirect.com/science/article/pii/S1524070318300067},
+	keywords     = {Boolean operations, Plane-based geometry, CSG evaluation, Hybrid representation}
 }
-@ARTICLE {sbounds_csg,
-author = {S. Cameron},
-journal = {IEEE Computer Graphics and Applications},
-title = {Efficient Bounds in Constructive Solid Geometry},
-year = {1991},
-volume = {11},
-number = {03},
-issn = {1558-1756},
-pages = {68-74},
-keywords = {},
-doi = {10.1109/38.79455},
-publisher = {IEEE Computer Society},
-address = {Los Alamitos, CA, USA},
-month = {may}
+@article{sbounds_csg,
+	title        = {Efficient Bounds in Constructive Solid Geometry},
+	author       = {S. Cameron},
+	year         = 1991,
+	month        = may,
+	journal      = {IEEE Computer Graphics and Applications},
+	publisher    = {IEEE Computer Society},
+	address      = {Los Alamitos, CA, USA},
+	volume       = 11,
+	number       = {03},
+	pages        = {68--74},
+	doi          = {10.1109/38.79455},
+	issn         = {1558-1756},
+	keywords     = {}
 }
-
-
 @misc{ucsgnet_ml,
-      title={UCSG-Net -- Unsupervised Discovering of Constructive Solid Geometry Tree}, 
-      author={Kacper Kania and Maciej Zięba and Tomasz Kajdanowicz},
-      year={2020},
-      eprint={2006.09102},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
+	title        = {UCSG-Net -- Unsupervised Discovering of Constructive Solid Geometry Tree},
+	author       = {Kacper Kania and Maciej Zięba and Tomasz Kajdanowicz},
+	year         = 2020,
+	eprint       = {2006.09102},
+	archiveprefix = {arXiv},
+	primaryclass = {cs.CV}
+}
+@inproceedings{normal_orientation,
+	author = {Borodin, P. and Zachmann, Gabriel and Klein, Reinhard},
+	year = {2004},
+	month = {07},
+	pages = {18 - 25},
+	title = {Consistent normal orientation for polygonal meshes},
+	isbn = {0-7695-2171-1},
+	journal = {Proceedings of Computer Graphics International Conference, CGI},
+	doi = {10.1109/CGI.2004.1309188}
 }
